--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -48,7 +48,7 @@
             <book style="--total-pages:7; --book-offset:6deg;">
         
               <section class="page cover" style="--page-number:0;  ">
-                <h1>History Of Technowin</h1><img src="{% static 'images/office_logo.png' %}">
+                <h1>History</h1><img src="{% static 'images/office_logo.png' %}">
               </section>
         
               <section class="page " style="--page-number:1; ">
@@ -107,7 +107,7 @@
                 </blockquote>
               </section>
               <div class="book-spine">
-                <h3>The Free Book Buggie</h3>
+                <h3>Technowin IT Infra Pvt. Ltd.</h3>
               </div>
             </book>
           </div>
